Fixed Overlaping Header in Task 5

--- a/ClassWork 5/Laboratory 6/Task 5/style.css
+++ b/ClassWork 5/Laboratory 6/Task 5/style.css
@@ -16,7 +16,7 @@ table th, td{
 
 .head{
     margin: auto;
-    width: 1000px;
+    width: 990px;
     height: 50px;
     padding: 5px;
     border: solid 1px black;
